--- a/index.html
+++ b/index.html
@@ -11,53 +11,47 @@
 </head>
 <body class="page">
   <header class="header">
-    <img class="header__logo" src="./images/__logo.png" alt="Логотип макета: карта России и наименование страны">
+    <img class="header__logo" src="./images/__logo.svg" alt="Логотип макета: карта России и наименование страны">
     <ul class="header__lang-links">
-      <li><a href="#" class="header__lang-link header__lang-link_type_active link">Ru</a></li>
+      <li><a href="#" class="header__lang-link header__lang-link_active link">Ru</a></li>
       <li><a href="#" class="header__lang-link link">En</a></li>
     </ul> 
   </header>
   <main class="content">
     <section class="lead">
-      <h1 class="lead__title">Путешествия по России</h1>
-      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img class="lead__image" src="./images/lead-polka.jpg" alt="Женщина, лежащая на боку на нижней полке в поезде на боковом месте в сторону окна">
-      <p class="lead__caption">Ваша полка — верхняя</p>
+      <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+      <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
+      <figure class="lead__cover">
+        <img class="lead__image" src="./images/lead-polka.jpg" alt="Женщина, лежащая на боку на нижней полке в поезде на боковом месте в сторону окна">
+        <figcaption class="lead__caption">Ваша полка — верхняя</figcaption>
+      </figure>
     </section>
     <section class="intro">
-      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
       <p class="intro__subtitle">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
-        <li>
-          <p class="intro__list-text">Часовых поясов<span class="intro__span-accent">&#160;11</span></p>
-        </li>
-        <li>
-          <p class="intro__list-text">Объектов природного наследия ЮНЕСКО<span class="intro__span-accent">&#160;12</span></p>
-        </li>
-        <li>
-          <p class="intro__list-text">Объектов культурного наследия ЮНЕСКО<span class="intro__span-accent">&#160;16</span></p>
-        </li>
-        <li>
-          <p class="intro__list-text">Природных заповедников<span class="intro__span-accent">&#160;105</span></p>
-        </li>
-        <li>
-          <p class="intro__list-text">Аэропортов<span class="intro__span-accent">&#160;241</span></p>
-        </li>
+        <li class="intro__list-text">Часовых поясов<span class="intro__span-accent">&#160;11</span></li>
+        <li class="intro__list-text">Объектов природного наследия ЮНЕСКО<span class="intro__span-accent">&#160;12</span></li>
+        <li class="intro__list-text">Объектов культурного наследия ЮНЕСКО<span class="intro__span-accent">&#160;16</span></li>
+        <li class="intro__list-text">Природных заповедников<span class="intro__span-accent">&#160;105</span></li>
+        <li class="intro__list-text">Аэропортов<span class="intro__span-accent">&#160;241</span></li>
       </ul> 
     </section>
     <section class="photo-grid" aria-label="Блок с фотографими различных мест России">
-      <img class="photo-grid__image" src="./images/photo-grid-train.jpg" alt="Вид на озера из окна поезда">
-      <img class="photo-grid__image" src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид на горы с облаками">
-      <img class="photo-grid__image" src="./images/photo-grid-tuman.jpg" alt="Раннее утро в поле, стелящийся туман, и волк на стоге сена">
-      <img class="photo-grid__image" src="./images/photo-grid-sochi.jpg" alt="Лес в горах, окутанный низкими облаками">
-      <img class="photo-grid__image" src="./images/photo-grid-arisa.jpg" alt="Колесо машны ни прозрачном льду">
-      <img class="photo-grid__image" src="./images/photo-grid-baikal.jpg" alt="Песчаный берег озера с горами вдалеке">
-      <img class="photo-grid__image" src="./images/photo-grid-elbrus.jpg" alt="Гора Эльбрус">
-      <img class="photo-grid__image" src="./images/photo-grid-kondratiev.jpg" alt="Знак Пешеходный переход">
-      <img class="photo-grid__image" src="./images/photo-grid-kamchatka-1.jpg" alt="Горы Камчатки в облаках">
-      <img class="photo-grid__image" src="./images/photo-grid-kamchatka-2.jpg" alt="Гора Камчатки">
-      <img class="photo-grid__image" src="./images/photo-grid-baikal-2.jpg" alt="Скалистый берег озера Байкал">
-      <img class="photo-grid__image" src="./images/photo-grid-ergaki.jpg" alt="Парк Ергаки">
+      <ul class="photo-grid__images">
+        <li><img class="photo-grid__image" src="./images/photo-grid-train.jpg" alt="Вид на озера из окна поезда"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид на горы с облаками"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-tuman.jpg" alt="Раннее утро в поле, стелящийся туман, и волк на стоге сена"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-sochi.jpg" alt="Лес в горах, окутанный низкими облаками"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-arisa.jpg" alt="Колесо машны ни прозрачном льду"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-baikal.jpg" alt="Песчаный берег озера с горами вдалеке"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-elbrus.jpg" alt="Гора Эльбрус"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-kondratiev.jpg" alt="Знак Пешеходный переход"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-kamchatka-1.jpg" alt="Горы Камчатки в облаках"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-kamchatka-2.jpg" alt="Гора Камчатки"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-baikal-2.jpg" alt="Скалистый берег озера Байкал"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid-ergaki.jpg" alt="Парк Ергаки"></li>
+      </ul>
     </section>
     <section class="places">
       <ul class="places__cards">
@@ -65,7 +59,7 @@
           <h2 class="places__title">Куршская коса</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
-            <a href="http://park-kosa.ru" class="places__link link">park-kosa.ru</a>
+            <a href="http://park-kosa.ru" class="places__link link" target="_blank">park-kosa.ru</a>
           </div>
           <img class="places__image" src="./images/place-kosa.jpg"  alt="Скалы и воды Куршской косы">
           <div class="places__description">
@@ -132,8 +126,8 @@
     </section>
     <section class="cover">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background" target="_blank">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
+        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
       </a>
     </section>
   </main>
